[package]
name = "finna"
version = "0.1.0"
authors = ["samuli <samuli.sillanpaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
url_serde = "0.2.0"
serde_derive = "1.0.102"
serde_json = "1.0.41"
colored = "1.8.0"
structopt = "0.3.3"
itertools = "0.8.1"
dialoguer = "0.4.0"
