[package]
name = "finna"
version = "0.1.0"
authors = ["samuli <samuli.sillanpaa@gmail.com>"]
edition = "2018"

[profile.release]
panic = 'abort'
lto = true
opt-level = 'z'  # Optimize for size.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
url_serde = "0.2.0"
serde_derive = "1.0.102"
serde_json = "1.0.41"
colored = "1.8.0"
structopt = "0.3.3"
serde_urlencoded = "0.6.1"
serde_qs = "0.5.0"
rustyline = "5.0.4"
void = "1.0.2"
regex = "1.3.1"
tabular = "0.1.2"
open = "1.3.2"
confy = "0.3.1"
