[package]
authors = ["samuli <samuli.sillanpaa@gmail.com>"]
edition = "2018"
name = "finna"
version = "0.1.0"
[dependencies]
colored = "1.8.0"
confy = "0.3.1"
open = "1.3.2"
regex = "1.3.1"
reqwest = "0.9.22"
rustyline = "5.0.4"
rustyline-derive = "*"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
serde_qs = "0.5.0"
serde_urlencoded = "0.6.1"
structopt = "0.3.3"
tabular = "0.1.2"
url_serde = "0.2.0"
void = "1.0.2"

